--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.4.1"
 kotlin = "1.9.23"
+composeCompiler = "1.5.8"
 coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -30,4 +31,5 @@ protolite-well-known-types = { group = "com.google.firebase", name = "protolite-
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-compose = { id = "androidx.compose.compiler", version.ref = "composeCompiler" }
 
